--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.6",
+    "axios": "^1.13.1",
     "firebase": "^12.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
