--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
+    "recharts": "^3.4.1",
     "sweetalert2": "^11.26.3",
     "swiper": "^12.0.3"
   },
